프론트앤드 연동

--- a/backend/venv1/whatneed_nginx.conf
+++ b/backend/venv1/whatneed_nginx.conf
@@ -7,7 +7,7 @@ upstream django {
 # configuration of the server
 server {
     # the port your site will be served on
-    listen 80;
+    listen 8080;
     # the domain name it will serve for
     server_name 52.79.161.164 .i02b101.p.ssafy.io; # substitute your machine's IP address or FQDN
     charset utf-8;
@@ -27,5 +27,13 @@ server {
         uwsgi_pass django;
         include /home/ubuntu/WhatNeed/s02p23b101/backend/uwsgi_params; # the uwsgi_params file you installed
     }
+
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/i02b101.p.ssafy.io/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/i02b101.p.ssafy.io/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
 }
 
