--- a/backend/venv1/whatneed_nginx.conf
+++ b/backend/venv1/whatneed_nginx.conf
@@ -4,36 +4,76 @@ upstream django {
     server unix:///tmp/whatneed.sock; # for a file socket
     #server 127.0.0.1:8001; # for a web port socket (we'll use this first)
 }
+
+#server {
+#	listen 80;
+#	server_name i02b101.p.ssafy.io;
+#	charset utf-8;
+##	return 301 https://$host$request_uri;
+#	location / {
+#        	root /home/ubuntu/WhatNeed/s02p23b101/frontend/build;
+#        	index index.html index.htm;
+#       		try_files $uri /index.html;
+#       # proxy_pass http://localhost:3000;
+#
+#   }
+#	
+#}
+
+
+
+
 # configuration of the server
 server {
     # the port your site will be served on
-    listen 8080;
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
     # the domain name it will serve for
-    server_name 52.79.161.164 .i02b101.p.ssafy.io; # substitute your machine's IP address or FQDN
+    #server_name 52.79.161.164 .i02b101.p.ssafy.io; # substitute your machine's IP address or FQDN
+    server_name i02b101.p.ssafy.io;
+
     charset utf-8;
     # max upload size
     client_max_body_size 100M;
     # adjust to taste
     # Django media
-    location /media  {
-        alias /home/ubuntu/WhatNeed/s02p23b101/backend/media;  # your Django project's media files - amend as required
-    }
-    location /static {
-        alias /home/ubuntu/WhatNeed/s02p23b101/backend/static; # your Django project's static files - amend as required
-    }
-    # Finally, send all non-media requests to the Django server.
-    location / {
-	proxy_pass http://localhost:8000;
-        uwsgi_pass django;
-        include /home/ubuntu/WhatNeed/s02p23b101/backend/uwsgi_params; # the uwsgi_params file you installed
-    }
+    
+ #   ssl on;
+ #   ssl_certificate /etc/ssl/certs/surveyspan_com.crt;
+ #   ssl_certificate_key /etc/ssl/private/surveyspan.key;
+#    ssl_prefer_server_ciphers on;   
+
+    #include /etc/nginx/moules-enabled/*.conf; 
+#    location /media  {
+#        alias /home/ubuntu/WhatNeed/s02p23b101/backend/media;  # your Django project's media files - amend as required
+#    }
+#    location /static {
+#        alias /home/ubuntu/WhatNeed/s02p23b101/backend/static; # your Django project's static files - amend as required
+#    }
+#    # Finally, send all non-media requests to the Django server.
+#    location / {
+#	proxy_pass http://localhost:8000;
+#        uwsgi_pass django;
+#        include /home/ubuntu/WhatNeed/s02p23b101/backend/uwsgi_params; # the uwsgi_params file you installed
+#    }
+#   
+  location / {
+       root /home/ubuntu/WhatNeed/s02p23b101/frontend/build;
+
+       index index.html index.htm;
+  	try_files $uri /index.html;
+        #proxy_pass https://localhost:5000;
+
+   }
 
 
-    listen 443 ssl; # managed by Certbot
+
+#ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+#ssl_prefer_server_ciphers on;
     ssl_certificate /etc/letsencrypt/live/i02b101.p.ssafy.io/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/i02b101.p.ssafy.io/privkey.pem; # managed by Certbot
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
-}
 
+}
