--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,13 +2,16 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "build": "GENERATE_SOURCEMAP=false react-scripts build",
   "dependencies": {
     "@material-ui/core": "^4.9.12",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@vardius/react-user-media": "^1.0.1",
     "axios": "^0.19.2",
+    "npx": "^10.2.2",
     "react": "^16.13.1",
     "react-addons-update": "^15.6.2",
     "react-dom": "^16.13.1",
