--- a/.gitignore
+++ b/.gitignore
@@ -44,7 +44,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
-
+coffee/
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
